# zdiff

./: Cargo.toml  README.md
examples/: config.rs  hello.rs  similar.rs  syntect.rs
fixtures/: test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
src/config/: diff_config.rs  diff_profile.rs  extra_args.rs  mod.rs  profile.rs
