[package]
name = 'zdiff'
version = '0.1.0'
edition = '2021'

[dependencies]
anyhow = '1.0.65'
http-serde = '1.1.2'
serde_json = '1.0.86'
serde_yaml = '0.9.13'
similar = '2.2.0'
serde_urlencoded = "0.7.1"

[dependencies.clap]
version = '4.0.15'
features = ['derive']

[dependencies.reqwest]
version = '0.11.12'
default-features = false
features = ['rustls']

[dependencies.serde]
version = '1.0.145'
features = ['derive']

[dependencies.tokio]
version = '1.21.2'
features = ['full']

[dependencies.url]
version = '2.3.1'
features = ['serde']
