[package]
name = 'zdiff'
version = '0.1.0'
edition = '2021'

[dependencies]
anyhow = '1.0.65'
http-serde = '1.1.2'
serde_json = '1.0.86'
serde_yaml = '0.9.13'
serde_urlencoded = '0.7.1'
console = '0.15.2'
dialoguer = "0.10.2"

[dependencies.similar]
version = '2.2.0'
features = ['inline']

[dependencies.clap]
version = '4.0.15'
features = ['derive']

[dependencies.reqwest]
version = '0.11.12'
default-features = false
features = ['rustls-tls']

[dependencies.serde]
version = '1.0.145'
features = ['derive']

[dependencies.tokio]
version = '1.21.2'
features = ['full']

[dependencies.url]
version = '2.3.1'
features = ['serde']
